--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,13 @@ dependencies:
   url_launcher: ^6.1.11
   geocoding:
   blobs:
-  tflite: ^1.1.2
+  tflite:
   camera:
   image:
   tflite_flutter:
+  qr_code_scanner: ^1.0.1
+
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
